# soliloque-client

./: AUTHORS  Freespeak_Prefix.pch  INSTALL  Info.plist  Makefile  Makefile.am  acknowledge.c  acknowledge.h  autogen.sh  channel_list.c  channel_list.h  cleanup.sh  compat.h  config.h.in  configure.in  connection_request.c  connection_request.h  crc.c  crc.h  decoder.c  decoder.h  encoder.c  encoder.h  glib.h  highlevel.c  highlevel.h  keepalive.c  keepalive.h  log_packet.c  log_packet.h  main.c  main.m  message2.c  message2.h  new_player.c  new_player.h  player_list.c  player_list.h  player_quit.c  player_quit.h  (+9 more)
English.lproj/MainMenu.nib/: designable.nib  keyedobjects.nib
Freespeak.xcodeproj/: hugo.mode1v3  hugo.pbxuser  hugo.perspectivev3  project.pbxproj
celp/: Makefile  Makefile.am  autohf.c  celp.h  celp_decode.c  celp_encode.c  celpint.h  codebook.h  csub.c  ftol.h  gaincode.c  ham.c  lsp34.c  lsptopc.c  pctolsp2.c  pctolsp3.c  pdelay.h  pgain.c  pitchvq.c  polefilt.c  psearch.c  ptcode.c  submult.h  zerofilt.c
gsm/: Makefile.am  gsm.h
gui/: Makefile.am  application.cpp  application.h  connectbox.cpp  connectbox.h  fmenu.cpp  fmenu.h  logwindow.cpp  logwindow.h  mainandlog.cpp  mainandlog.h  servertree.cpp  servertree.h
include/: acknowledge.h  channel_list.h  connection_request.h  highlevel.h  keepalive.h  message2.h  player_list.h  server_info.h  sound.h  toolbox.h
mac/: main.h
