#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.60)
AC_INIT(main.c)
AM_INIT_AUTOMAKE(freespeak, 0.1)
AC_CONFIG_SRCDIR([player_quit.c])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB


# Add options for gsm
AC_ARG_WITH(gsm,
    [ --with-gsm=<path> prefix of GSM installation. e.g. /usr/local or /usr],
    [GSM_PREFIX=$with_gsm
	 AC_SUBST(GSM_PREFIX)
	 GSM_LIBS="-L${GSM_PREFIX}/lib/ -lgsm"
	 GSM_CFLAGS="-I${GSM_PREFIX}/include"
	 AC_SUBST(GSM_LIBS)
	 AC_SUBST(GSM_CFLAGS)
	 CPPFLAGS="$CFLAGS $GSM_CFLAGS"
	 LIBS="$LIBS $GSM_LIBS"]
)

# Set path for speex using pkg-config
PKG_CHECK_MODULES(SPEEX, speex, 
    [AC_SUBST(SPEEX_CFLAGS)
	 AC_SUBST(SPEEX_LIBS)
	 CPPFLAGS="$CFLAGS $SPEEX_CFLAGS"
	 LIBS="$LIBS $SPEEX_LIBS"],
	[AC_ERROR(Please install speex first.)]
)



# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([arpa/inet.h fcntl.h limits.h malloc.h memory.h netinet/in.h stdint.h stdlib.h string.h strings.h sys/socket.h unistd.h utime.h])
AC_CHECK_HEADER([speex/speex.h], [], [AC_ERROR(Unable to find speex header.)])
AC_CHECK_HEADER([gsm.h], [], [AC_ERROR(Unable to find gsm header.)])

# Checks for libraries.
AC_CHECK_LIB([m], [sqrt])
AC_CHECK_LIB([gsm], [gsm_create])
AC_CHECK_LIB([speex], [speex_decoder_init])



# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STAT
AC_C_CONST
AC_TYPE_INT16_T
AC_TYPE_INT32_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT8_T

# Checks for library functions.
AC_FUNC_CHOWN
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_FUNC_REALLOC
AC_TYPE_SIGNAL
AC_FUNC_STAT
AC_FUNC_UTIME_NULL
AC_CHECK_FUNCS([bzero memset pathconf socket sqrt strchr strrchr strtol utime])

AC_CONFIG_FILES(Makefile celp/Makefile)
AC_OUTPUT
