#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.60)
AC_INIT(main.c)
AM_INIT_AUTOMAKE(freespeak, 0.1)
AC_CONFIG_SRCDIR([player_quit.c])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB


# Add options for gsm
#AC_ARG_WITH(gsm,
#    [ --with-gsm=<path> prefix of GSM installation. e.g. /usr/local or /usr],
#    [GSM_PREFIX=$with_gsm
#	 AC_SUBST(GSM_PREFIX)
#	 GSM_LIBS="${GSM_PREFIX}/lib/libgsm.a"
#	 GSM_CFLAGS="-I${GSM_PREFIX}/include"
#	 AC_SUBST(GSM_LIBS)
#	 AC_SUBST(GSM_CFLAGS)
#         CFLAGS="$CFLAGS $GSM_CFLAGS"
#    ]
#)

# Check for speex
XIPH_PATH_SPEEX()
# Check for wxwidgets
AM_OPTIONS_WXCONFIG
reqwx=2.6.0
AM_PATH_WXCONFIG($reqwx, wxWin=1)
if test "$wxWin" != 1; then
  AC_MSG_ERROR([
    wxWidgets must be installed on your system.

    Please check that wx-config is in path, the directory
    where wxWidgets libraries are installed (returned by
    'wx-config --libs' or 'wx-config --static --libs' command)
    is in LD_LIBRARY_PATH or equivalent variable and
    wxWidgets version is $reqwx or above.
  ])
fi
CXXFLAGS="-I/usr/include/"
CPPFLAGS="$CPPFLAGS $WX_CPPFLAGS"
CXXFLAGS="$CXXFLAGS $WX_CXXFLAGS_ONLY"
CFLAGS="$CFLAGS $WX_CFLAGS_ONLY"
LIBS="$LIBS $WX_LIBS $WX_LIBS_STATIC"


# portaudio stuff...
CFLAGS="$CFLAGS `pkg-config --cflags portaudio-2.0`"
LIBS="$CFLAGS `pkg-config --libs portaudio-2.0`"


# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([arpa/inet.h fcntl.h limits.h malloc.h memory.h netinet/in.h stdint.h stdlib.h string.h strings.h sys/socket.h unistd.h utime.h, string.h])
#AC_CHECK_HEADER([gsm.h], [], [AC_ERROR(Unable to find gsm header.)])
#AC_CHECK_HEADER([portaudio.h], [], [AC_ERROR(Unable to find portaudio header.)])

# Checks for libraries.
AC_CHECK_LIB([m], [sqrt])
#AC_CHECK_LIB([gsm], [gsm_create])
#AC_CHECK_LIB([portaudio], [Pa_Initialize])

# Check for boost::thread
#AX_BOOST_BASE()
#AX_BOOST_THREAD()

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STAT
AC_C_CONST
AC_TYPE_INT16_T
AC_TYPE_INT32_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT8_T

# Checks for library functions.
AC_FUNC_CHOWN
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_FUNC_REALLOC
AC_TYPE_SIGNAL
AC_FUNC_STAT
AC_FUNC_UTIME_NULL
AC_CHECK_FUNCS([bzero memset pathconf socket sqrt strchr strrchr strtol utime])

AC_CONFIG_FILES(Makefile celp/Makefile gui/Makefile gsm/Makefile)
AC_OUTPUT
