noinst_LIBRARIES = libgsm.a
libgsm_a_SOURCES = add.c code.c debug.c decode.c gsm.h.orig gsm_create.c gsm_decode.c gsm_destroy.c gsm_encode.c gsm_explode.c gsm_implode.c gsm_option.c gsm_print.c include long_term.c lpc.c preprocess.c rpe.c short_term.c table.c toast.c toast_alaw.c toast_audio.c toast_lin.c toast_ulaw.c
